[package]
name = "jlq"
version = "0.1.0"
edition = "2021"
authors = ["Haris Amin <aminharis7@gmail.com>"]
description = """
Query JSON log files quickly and efficiently with the power of SQLite
"""
readme = "README.md"
homepage = "https://github.com/hamin/jlq"
license = "MIT"
keywords = ["jq", "json", "log", "query", "SQLite"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
structopt = "0.3"
tokio = { version = "1.16", features = [ "net", "rt-multi-thread", "macros", "io-util", "io-std" ] }
tokio-util = { version = "0.6", features = [ "codec" ] }
linemux = "0.2"
colored_json = "3.0.1"
indicatif = "0.17.2"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]